# mlir-showcase

./: .gitignore  README.md  export_model.py  inference.py  input.npy  requirements.txt  sample.py  signatures.py
mobilenet_v2_saved_model/: fingerprint.pb  saved_model.pb
mobilenet_v2_saved_model/variables/: variables.index
native_runner/: CMakeLists.txt  runner.c  runner_embedded.c
